--- a/templates/contact.html
+++ b/templates/contact.html
@@ -42,7 +42,7 @@
         </form>
     </section>
     
-    <footer class="bg-dark text-white text-center p-3">
+    <footer class="bg-transparent text-black text-center p-33">
         <p>&copy; 2025 Jose Alfonzo. All rights reserved.</p>
     </footer>
     
