--- a/templates/skills.html
+++ b/templates/skills.html
@@ -107,7 +107,7 @@
         </section>
     </div>
     <!-- Footer -->
-    <footer class="fixed-bottom bg-dark text-white text-center p-3">
+    <footer class="fixed-bottom bg-transparent text-black text-center p-3">
         <p>&copy; 2025 Jose Alfonzo. All rights reserved.</p>
     </footer>
 
