--- a/css/navbar.css
+++ b/css/navbar.css
@@ -6,7 +6,7 @@ body {
 }
 
 .navbar {
-    background-color: white !important;
+    background-color: transparent !important;
     color: black !important;
     padding: 15px;
     position: sticky;
@@ -19,7 +19,7 @@ body {
 }
 
 .nav-link {
-    color: black !important;
+    color: black !important; /* Adjusted color to black */
     text-decoration: none;
     padding: 10px 30px; /* Adjusted padding for more space between options */
     font-weight: bold;
@@ -50,7 +50,7 @@ body {
 
 /* Dropdown Menu Styling */
 .dropdown-menu {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.8); /* Slightly transparent background for dropdown */
     border: none;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     transition: opacity 0.3s ease;
