--- a/css/skills.css
+++ b/css/skills.css
@@ -1,4 +1,13 @@
 /* Skills Section - Revised Grid Layout */
+body {
+    font-family: 'Inter', sans-serif;
+    background-image: url('../images/overhead-view-coffee-cup-keyboard-camera-paper-white-background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+}
+
 #skills {
     margin-bottom: 10px;
     width: 100%; /* Full width containment */
@@ -65,14 +74,4 @@
 .skill-card:hover {
     transform: translateY(-5px);
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
-}
-
-.learn-more-btn {
-    margin-top: 20px;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-
-.learn-more-btn:hover {
-    background-color:rgb(0, 0, 0.2);
 }
