--- a/templates/about.html
+++ b/templates/about.html
@@ -93,7 +93,7 @@
         </ul>
     </section>
     
-    <footer class="bg-dark text-white text-center p-3">
+    <footer class="bg-transparent text-black text-center p-3">
         <p1>&copy; 2025 Jose Alfonzo. All rights reserved.</p1>
     </footer>
     
