--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 <head>
     <link rel="stylesheet" href="../css/navbar.css">
 </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
     <div class="container d-flex justify-content-between">
         <ul class="nav">
             <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
