--- a/templates/projects.html
+++ b/templates/projects.html
@@ -88,7 +88,7 @@
             <a href="https://github.com/Jrolando15" target="_blank">GitHub Profile</a></p>
     </section>
     
-    <footer class="bg-dark text-white text-center p-3">
+    <footer class="footer bg-transparent text-black text-center p-3">
         <p>&copy; 2025 Jose Alfonzo. All rights reserved.</p>
     </footer>
     
