--- a/templates/projects.html
+++ b/templates/projects.html
@@ -46,9 +46,9 @@
             <a href="https://github.com/Jrolando15/childrens-academy-swim" target="_blank">GitHub Repository</a>
         </div>
         <div class="project">
-            <h3>To-Do List Application</h3>
-            <p>Designed a web-based task manager for improved productivity.</p>
-            <a href="https://github.com/Jrolando15/todo-list" target="_blank">GitHub Repository</a>
+            <h3>Cuisine Library</h3>
+            <p>Designed a Recipe application to research the best recipes for your necessities</p>
+            <a href="https://github.com/jrolando15/Cuisine-library" target="_blank">GitHub Repository</a>
         </div>
         
         <h2 id="data-science-projects">Data Science Projects</h2>
