--- a/templates/about.html
+++ b/templates/about.html
@@ -18,10 +18,10 @@
     <section id="about" class="container my-5">
         <h1>About Me</h1>
         <p>
-            As a Venezuelan native with a strong background in competitive swimming, I have developed a robust foundation in discipline, teamwork, and achieving objectives. My academic journey began at the age of 16, and I am set to graduate at 21 with dual majors in <strong>Artificial Intelligence and Computer Science</strong> from Long Island University. This accelerated path reflects my dedication and passion for learning.
+            As a Venezuelan native with a strong background in competitive swimming, I have developed a robust foundation in discipline, teamwork, and achieving objectives. My academic journey began at the age of 16, and I graduated this past May at 21, double majoring in <strong>Artificial Intelligence and Computer Science</strong> from Long Island University. This accelerated path reflects my dedication and passion for learning.
         </p>
         <p>
-            I chose <strong>Artificial Intelligence</strong> because it uniquely combines my interests in <strong>mathematics, physics, and computation</strong>, offering a cutting-edge field that represents the next step in technological innovation. Throughout my academic career, I have maintained a cumulative <strong>GPA of 3.7</strong>, demonstrating my commitment to academic excellence. Additionally, I am a proud member of the <strong>Honors College at Long Island University</strong>, which has provided me with a challenging and enriching academic environment.
+            I chose <strong>Artificial Intelligence</strong> because it uniquely combines my interests in <strong>mathematics, physics, and computation</strong>, offering a cutting-edge field that represents the next step in technological innovation. Throughout my academic career, I have maintained a cumulative <strong>GPA of 3.7</strong>, demonstrating my commitment to academic excellence. Additionally, I was a proud member of the <strong>Honors College at Long Island University</strong>, which provided me with a challenging and enriching academic environment.
         </p>
     </section>
     
@@ -29,7 +29,7 @@
         <h2 class="section-title">Work Experience</h2>
         <div class="experience-item">
             <h3>AI Engineer Intern – PM Accelerator</h3>
-            <p class="details">August 2024 - Present | Remote</p>
+            <p class="details">August 2024 - January 2025 | Remote</p>
             <ul>
                 <li>Developed and enhanced the front-end of the company’s chatbot, focusing on user interface design and user experience.</li>
                 <li>Collaborated with product managers, designers, and data scientists to integrate AI-driven features seamlessly into the user interface.</li>
